# engine

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt  common.cpp  common.h
dev/: 1.txt  a.out  cpu_BN.cpp  cpu_bn2d.cpp  cpu_relu.cpp  cpu_sgemm.cpp  cpu_sgemm.cpp.ll  cpu_sgemm2.cpp  cpu_sgemm_openmp.cpp  cublas_sgemm.cu  cuda_bank.cu  cuda_conv.cu  cuda_conv1.cu  cuda_pooling.cu  cuda_sgemm.cu  cuda_sgemm2.cu  cuda_sgemm3.cu  cuda_sgemm4.cu  cuda_sgemm_shared.cu  cuda_sgemm_shared2.cu  cuda_sgemm_shared3.cu  cuda_sgemm_shared3.ll  cuda_sgemm_t.cu  cuda_sgemm_test.cu  cuda_test.cu  deepspeed_test.py  log_print.py  log_print2.py  log_print3.py  numpy_gemm.py  pytorch_bn.py  pytorch_conv_test.py  pytorch_sgemm.py  threadpool.cc  threadpool.h  threadpool2.cc  threadpool_test.cc
dev/grab/: test.py
dev/imgaug/: heatmap.py  keypoints_test.py
dev/inpaint/: test.py
dev/llvm/: add.c  add.ll  callgraph.dot  cfg.f.dot  cfg.main.dot  code.c  code_before_opt.ll  code_new.ll  main  remove_dead_blocks.c  remove_dead_blocks.ll
dev/llvm/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  README.md
dev/llvm/InjectFuncCall/: CMakeLists.txt  InjectFuncCall.cpp  InjectFuncCall.h  README.md  input_for_hello.c
dev/llvm/LACommenter/: CMakeLists.txt  LACommenter.cpp  LACommenter.h  README.md  input_file.cpp
dev/llvm/MBAAdd/: CMakeLists.txt  MBAAdd.cpp  MBAAdd.h  README.md  input_for_mba.c
dev/llvm/Obfuscator/: CMakeLists.txt  Obfuscator.cpp  Obfuscator.h  README.md  input_add.cpp
dev/llvm/OpcodeCounter/: CMakeLists.txt  OpcodeCounter.cpp  OpcodeCounter.h  README.md  input_for_cc.c
dev/ocr/: README.md  rotation.py  test.py
dev/pytorch/: conv2d_bias.py  profiler.py
dev/tvm/high-level API/: README.md  resnet50_Opset16.onnx  resnet50_Opset16.onnx.1  tvmcpythonintro.py
dev/tvm/relay/: test.py
dev/tvm/tvmc/: README.md  compile.sh  compile_with_tuning.sh  postprocess.py  preprocess.py  run.sh  run_autotuned.sh  tune.sh  wget-log
dev/tvm/tvmc/model/: mod.json
examples/: CMakeLists.txt
examples/alexnet/: CMakeLists.txt  README.md  convert-alexnet-to-ggml.py  main.cc  model.py  model.txt  test.py  test_alexnet.py
examples/gpt-2/: CMakeLists.txt  README.md  convert-cerebras-to-ggml.py  convert-ckpt-to-ggml.py  main.cc
examples/lenet/: CMakeLists.txt  README.md  convert-lenet-to-ggml.py  main.cc  model.py  test.py
examples/lenet/models/: mnist_0.830.pkl  mnist_0.917.pkl  mnist_0.925.pkl  mnist_0.945.pkl  mnist_0.952.pkl  mnist_0.956.pkl  mnist_0.964.pkl  mnist_0.972.pkl  mnist_0.976.pkl  mnist_0.978.pkl  mnist_0.980.pkl  mnist_0.981.pkl
examples/mnist/: CMakeLists.txt  README.md  convert-h5-to-ggml.py  main.cc  mnist-fcn.py  mnist.state_dict
examples/nvidia_gpu_bandwidth_test/: Makefile  nvidia_gpu_bandwith_test  nvidia_gpu_bandwith_test.cu
examples/op_add/: CMakeLists.txt  main.cc
examples/op_conv2d/: CMakeLists.txt  main.cc
examples/op_mat_mut/: CMakeLists.txt
examples/resnet/: CMakeLists.txt  README.md  main.cc  model.py  test_resnet2.py
examples/resnet101/: CMakeLists.txt  README.md  export_pytorch_model.py  main.cc  model.py  test_model_cmp.py  test_resnet.py
examples/resnet152/: CMakeLists.txt  README.md  export_pytorch_model.py  main.cc  test_dump_model.py  test_model.py  test_resnet.py
examples/resnet18/: CMakeLists.txt  README.md  convert-jpg-to-bin.py  convert-resnet-to-ggml.py  export_pytorch_model.py  export_pytorch_to_onnx.py  main.cc  model-old.py  performance.py  test_onnx_inference.py  test_resnet.py  test_resnet2.py
examples/resnet34/: CMakeLists.txt  README.md  export_pytorch_model.py  main.cc  test_resnet.py  test_resnet2.py
examples/resnet50/: CMakeLists.txt  README.md  main.cc  model.py  test_model.py  test_resnet.py  test_resnet1.py  test_resnet_new.py  test_resnet_new2.py
examples/vgg/: README.md  convert-vgg-to-ggml.py  export_vgg.py  test_vgg.py
examples/wide_resnet50/: README.md  export_pytorch_model.py  main.cc  model.py  test_resnet_new.py
include/ml/: ml-alloc.h  ml-backend.h  ml.h
src/: CMakeLists.txt  main.cc  ml-alloc.cc  ml-backend-impl.h  ml-backend.cc  ml-cuda.cu  ml-cuda.h  ml-impl.h  ml.cc
tests/: CMakeLists.txt  test-conv2d.cc  test-cuda.cc  test-mul-mat.cc
tools/: tool_resize_crown.py  tool_resize_side.py
